...
            onPress={() => moveToQuestions('hard')}
            customStyles={{
              container: {
                backgroundColor: colors.error,
              },
            }}
            testID="hard-button"
          />
        </View>
      </View>
      <TouchableWithoutFeedback delayLongPress={5000} onLongPress={handleLongPress} onPress={handlePress} testID="hidden-dev-menu-button">
        <View
          position="absolute"
          bottom={spacing.s4}
          right={spacing.s4}
          width={50}
          height={50}
...
